tests/fixtures/components/invalid-foldable/csrf.blade.php
@blaze

<form method="POST">
    @csrf
    {{ $slot }}
</form>
